<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Meditrack</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="taken">Taken</string>
    <string name="dismiss">Dismiss</string>
    <string name="clock_content_description">Clock Icon</string>
    <string name="calendar_content_description">Calendar Icon</string>
    <string name="pill_bottle_content_description">Pill Bottle Icon</string>
    <string name="pill_content_description">Pill Icon</string>
    <string name="reset_pill_content_description">Reset Pill Taken Button</string>
    <string name="purple_pill_bottle_content_description">Purple Pill Bottle</string>
    <string name="light_purple_pill_bottle_content_description">Light Purple Pill Bottle</string>
    <string name="light_blue_pill_bottle_content_description">Light Blue Pill Bottle</string>
    <string name="red_pill_bottle_content_description">Red Pill Bottle</string>
    <string name="light_red_pill_bottle_content_description">Light Red Pill Bottle</string>
    <string name="pink_pill_bottle_content_description">Pink Pill Bottle</string>
    <string name="dark_green_pill_bottle_content_description">Dark Green Pill Bottle</string>
    <string name="green_pill_bottle_content_description">Green Pill Bottle</string>
    <string name="light_green_pill_bottle_content_description">Light Green Pill Bottle</string>
    <string name="dark_orange_pill_bottle_content_description">Dark Orange Pill Bottle</string>
    <string name="orange_pill_bottle_content_description">Orange Pill Bottle</string>
    <string name="light_orange_pill_bottle_content_description">Light Orange Pill Bottle</string>
    <string name="warning_icon_content_description">Warning Icon</string>
    <string name="blue_theme_button_content_description">Blue Theme Button</string>
    <string name="grey_theme_button_content_description">Grey Theme Button</string>
    <string name="purple_theme_button_content_description">Purple Theme Button</string>
    <string name="plus_button">Plus button</string>
    <string name="minus_button">Minus Button</string>
    <string name="enter_pill_name">Medication Name</string>
    <string name="enter_pill_time_reminders">Reminders?</string>
    <string name="enter_pill_refill_date_reminder">Refill Date?</string>
    <string name="enter_pill_amount">Supply?</string>
    <string name="create_pill_btn">Create</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="time">Time</string>
    <string name="notifications">Notifications</string>
    <string name="sticky">Sticky Notifications</string>
    <string name="_24_hour_format">24 Hour Format</string>
    <string name="database">Database</string>
    <string name="delete_all_pills">Delete All Pills</string>
    <string name="theme_applied">%1$s theme applied :)</string>
    <string name="select_theme_dialog_title">Select</string>
    <string name="change_theme">Change Theme</string>
    <string name="meditrackAboutParagraph_1">Meditrack is a free and open-source medication reminder app without any trackers, annoying ads or unnecessary permissions.</string>
    <string name="meditrackAboutParagraph_2">Meditrack is provided as a completely free application and it does not generate any revenue from ads or selling data.\n\nIf you would like to support Meditrack and its future development, there are a number of donation options:</string>
    <string name="monero" translatable="false">Monero</string>
    <string name="bitcoin" translatable="false">Bitcoin</string>
    <string name="monero_address" translatable="false">86ywTu1eDABJB2CxGf9mwMbX6ibfc7pga1XusQCrfvMYdNpNPto1BaDSbWeas13Nkg3iLigkzS7wSGc8YoQxEkHhHdrA4Ni</string>
    <string name="bitcoin_address" translatable="false">bc1qmx2fpalg6lk4hur4pqgsnz0ts8q6wsm47j8w9p</string>
    <string name="take_at">Take at %1$s</string>
    <string name="take_at_custom_interval">Take at %1$s\n(%2$s)</string>
    <string name="taken_at">Taken at %1$s</string>
    <string name="device_restart_toast">Resetting alarms for Meditrack :)</string>
    <string name="time_format_24hr_toast">Time format set to 24hr.</string>
    <string name="time_format_12hr_toast">Time format set to 12hr.</string>
    <string name="pill_taken_toast">%1$s taken.</string>
    <string name="pill_reset_toast">%1$s reset.</string>
    <string name="sticky_notifications_enabled_toast">Sticky notifications enabled.</string>
    <string name="sticky_notifications_disabled_toast">Sticky notifications disabled.</string>
    <string name="unknown_error_toast">Unknown error in Meditrack :(</string>
    <string name="pill_db_deleted_toast">All medications deleted.</string>
    <string name="append_pill_deleted_toast">%1$s deleted.</string>
    <string name="pill_bottle_amount_toast">You have %1$d %2$s medications left.</string>
    <string name="reminder_notification_description">It\'s time to take your medication: %1$s :)</string>
    <string name="welcome_dialog_title">Welcome</string>
    <string name="welcome_dialog_message">To create your first medication, select the plus button at the bottom of your screen.</string>
    <string name="pill_name_dialog_title">Pill Name</string>
    <string name="pill_name_dialog_msg">Please enter a name for your medication by clicking the line below:\n</string>
    <string name="pill_name_dialog_text_hint">Name - keep it short :)</string>
    <string name="done">Done</string>
    <string name="choose_pill_amount_dialog_title">Amount</string>
    <string name="pill_deletion_dialog_title">Delete?</string>
    <string name="pill_deletion_dialog_message">Are you sure you want to delete %1$s?\n\nThis cannot be undone!</string>
    <string name="pill_db_reset_dialog_title">Delete Pills</string>
    <string name="pill_db_reset_dialog_message">Would you like to delete the entire medication database?\n\nWARNING: This will remove all medications - it CANNOT be undone!</string>
    <string name="reset_pill_dialog_title">Reset?</string>
    <string name="reset_pill_dialog_message">Would you like to reset the taken status of %1$s?</string>
    <string name="choose_frequency_dialog_message">How often do you take this medication?</string>
    <string name="choose_frequency_dialog_title">Frequency</string>
    <string name="choose_frequency_dialog_custom_interval">Set a custom interval instead</string>
    <string name="choose_frequency_dialog_weekly">Weekly</string>
    <string name="choose_frequency_dialog_every_other_day">Every other day</string>
    <string name="choose_frequency_dialog_daily">Daily</string>
    <string name="choose_frequency_dialog_multiple_daily">Multiple times a day</string>
    <string name="ask_overlay_permission_dialog_title">Overlay</string>
    <string name="ask_overlay_permission_dialog_message">To set alarms, Meditrack needs the \'display over other apps\' permission.\n\nIf you would like to receive full-screen alarm reminders, please grant this permission to Meditrack in your settings.\n\nNote: You can enable this permission at any time via your device\'s settings.</string>
    <string name="alarm_or_notification_dialog_title">Alarm?</string>
    <string name="alarm_or_notification_dialog_message">Would you like to be reminded about this medication with an alarm or notification?</string>
    <string name="take_pill_content_description">Take Pill Button</string>
    <string name="choose_times_per_day_dialog_message">How many times a day do you take this medication?</string>
    <string name="btc_address_copied">BTC address copied :)</string>
    <string name="xmr_address_copied">XMR address copied :)</string>
    <string name="custom_interval_dialog_message">Set a custom interval (in days) for your medication reminder using the buttons below:</string>
    <string name="custom_interval_dialog_title">Interval</string>
    <string name="clocks_dialog_time_text">Time #%1$d</string>
    <string name="chooses_times_dialog_text">Set the reminder times for your medication using the clocks below:</string>
    <string name="context_menu_update">Update</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_change_color">Change Color</string>
    <string name="donation_dialog_message">If you enjoy using Meditrack, please consider making a donation :)\n\nMeditrack is completely free and open-source without any ads or trackers.\n\nYou can donate using one of the buttons below:</string>
    <string name="reminder_already_taken_description">You have already taken your %1$s :)</string>
    <string name="paypal_donation_link" translatable="false">https://www.paypal.com/donate/?hosted_button_id=A8UNN2A4D3P3G</string>
    <string name="blue">Blue</string>
    <string name="grey">Grey</string>
    <string name="dark">Dark</string>
    <string name="purple">Purple</string>
    <string name="dark_dialogs_setting">Dark Dialogs</string>
    <string name="dark_dialogs_toast">Dark dialogs applied :)</string>
    <string name="light_dialogs_toast">Light dialogs applied :)</string>
    <string name="dev_email">Developer email</string>
    <string name="meditrack_code">Meditrack\'s code</string>
    <string name="time_warning_toast">Times must be at least 15 mins apart.</string>
    <string name="time_enter">Please enter a time for each clock.</string>
    <string name="press_back_again_toast">Press the back button again to exit.</string>
    <string name="choose_start_date_dialog_title">Start Date</string>
    <string name="choose_start_date_dialog_message">Select the starting date for your medication using the calendar below.</string>
    <string name="donate_dialog_title">Donate</string>
    <string name="donate_monero">Donate Monero</string>
    <string name="donate_via_paypal">Donate via Paypal</string>
    <string name="choose_times_per_day_dialog_title">Reminders</string>
    <string name="meditrack_source_link" translatable="false">https://gitlab.com/meditrackdev/meditrack</string>
    <string name="append_days_to_custom_interval">Every %1$d days</string>
    <string name="sound">Sound</string>
    <string name="sound_switch">App Sounds</string>
    <string name="app_sounds_enabled">App sounds enabled.</string>
    <string name="app_sounds_disabled">App sounds disabled.</string>
    <string name="donate_bitcoin">Donate Bitcoin</string>
    <string name="pill_time_interval_text">Every %1$d days, starting %2$s</string>
    <string name="frequency">Frequency:\n</string>
    <string name="alarm_type_alarm">Type: Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="dialog_message_textview">Please set the medication times and alarm type using the buttons below.</string>
    <string name="reminder_times">Times:\n</string>
    <string name="reminder_type">Reminder Type:\n</string>
    <string name="reminder_sound">File:\n</string>
    <string name="custom_alarm_dialog_title">Custom Alarm?</string>
    <string name="custom_alarm_dialog_message">Would you like to use your own audio file or Meditrack\'s default alarm sound?</string>
    <string name="custom_alarm">Custom</string>
    <string name="default_alarm">Default</string>
    <string name="no_song_selected">No audio file selected.</string>
    <string name="its_time">It\'s %1$s!</string>
    <string name="paypal">Paypal</string>
    <string name="no_pills_found">No medications found.\n(╯°□°）╯︵ ┻━┻</string>
    <string name="add">Add</string>
    <string name="optional">Optional</string>
    <string name="reminder">Reminder</string>
    <string name="times">Times?</string>
    <string name="alarm_type">Alarm Type?</string>
    <string name="user_reminder_times">Reminder Times:\n12:00pm,</string>
    <string name="user_frequency">Frequency:\nEvery 3 days</string>
</resources>