<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_height="500dp"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_margin="40dp"
        app:layout_constraintTop_toTopOf="@id/rootConstraint"
        app:layout_constraintStart_toStartOf="@id/rootConstraint"
        app:layout_constraintBottom_toBottomOf="@id/rootConstraint"
        app:layout_constraintEnd_toEndOf="@id/rootConstraint">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/donateConstraint"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/bg_dialog_dark">

            <TextView
                android:id="@+id/dialog_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_dialog_title_dark"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/donate_dialog_title"
                android:textSize="35sp"

                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/dialog_message_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/donation_dialog_message"
                android:textColor="@color/black"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/bg_dialog_bottom_btn_dark"

        android:paddingHorizontal="32dp"
        android:text="@string/dismiss"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollview" />

</androidx.constraintlayout.widget.ConstraintLayout>
