<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/svg_chevron_left"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/theme_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/theme"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/theme_select_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <Button
        android:id="@+id/theme_select_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingTop="8dp"

        android:paddingBottom="8dp"
        android:text="@string/change_theme"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:theme="@style/SwitchCompatTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_textview" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_dialogs_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/dark_dialogs_setting"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:theme="@style/SwitchCompatTheme"
        app:layout_constraintEnd_toEndOf="@+id/theme_select_btn"
        app:layout_constraintStart_toStartOf="@+id/theme_select_btn"
        app:layout_constraintTop_toBottomOf="@+id/theme_select_btn" />

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/time"
        android:textColor="@color/white"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/clock_24hr_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sticky_notifications_switch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/clock_24hr_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:elegantTextHeight="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/_24_hour_format"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:theme="@style/SwitchCompatTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_textview" />

    <TextView
        android:id="@+id/sound_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/sound"
        android:textColor="@color/white"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/soundSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_dialogs_switch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/soundSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        android:elegantTextHeight="true"
        android:gravity="center_vertical"
        android:paddingTop="8dp"

        android:paddingBottom="8dp"
        android:text="@string/sound_switch"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:theme="@style/SwitchCompatTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_textview" />

    <TextView
        android:id="@+id/notifications_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/notifications"
        android:textColor="@color/white"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/sticky_notifications_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sticky_notifications_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        android:elegantTextHeight="true"
        android:gravity="center_vertical"
        android:paddingTop="8dp"

        android:paddingBottom="8dp"
        android:text="@string/sticky"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:theme="@style/SwitchCompatTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications_textview" />

    <TextView
        android:id="@+id/database_textview"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/database"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_load_test_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clock_24hr_switch" />

    <Button
        android:id="@+id/btn_load_test_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="Load Test Data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/database_textview" />

    <Button
        android:id="@+id/btn_delete_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/delete_all_pills"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_load_test_data" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/theme_select_btn"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dark_dialogs_switch"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundSwitch"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/soundSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_select_btn"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/clock_24hr_switch"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clock_24hr_switch"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_delete_data"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_data"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/sticky_notifications_switch"
        tools:ignore="UnusedAttribute" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:alpha="0.5"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sticky_notifications_switch"
        tools:ignore="UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>