<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_black">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/svg_chevron_left"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meditrack_paragraph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="32dp"
            android:layout_marginTop="12dp"
            android:letterSpacing="0.01"
            android:lineSpacingMultiplier="1.15"
            android:text="@string/meditrackAboutParagraph_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_github"
            app:layout_constraintStart_toEndOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/svg_capsule" />

        <TextView
            android:id="@+id/tv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:letterSpacing="0.01"
            android:text="@string/meditrack_code"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/meditrack_paragraph"
            app:layout_constraintTop_toBottomOf="@+id/meditrack_paragraph" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_github"
            app:layout_constraintStart_toEndOf="@+id/tv_github"
            app:layout_constraintTop_toTopOf="@+id/tv_github"
            app:srcCompat="@drawable/svg_github" />

        <TextView
            android:id="@+id/dev_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:letterSpacing="0.01"
            android:text="@string/dev_email"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/meditrack_paragraph"
            app:layout_constraintTop_toBottomOf="@+id/tv_github" />

        <TextView
            android:id="@+id/dev_email_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="32dp"
            android:autoLink="all"
            android:letterSpacing="0.01"
            android:text="meditrackdev@gmail.com"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dev_email_title"
            app:layout_constraintTop_toBottomOf="@+id/dev_email_title" />

        <TextView
            android:id="@+id/meditrack_paragraph_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:letterSpacing="0.01"
            android:lineSpacingMultiplier="1.15"
            android:text="@string/meditrackAboutParagraph_2"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dev_email_link"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>